// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App at / 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-3"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-4 makeStyles-Select-5 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-1 makeStyles-Offset-2"
  />
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <bdi
      dir="auto"
    >
      $100.00
    </bdi>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <bdi
      dir="auto"
    >
      Jul 27, 2019
    </bdi>
     
    <bdi
      dir="auto"
    >
      9:00:00 AM
    </bdi>
  </p>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Set the clock
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="MuiFormControl-root MuiTextField-root"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-10 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-11"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Consent to use cookies…
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`App at /chess 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-16"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-17 makeStyles-Select-18 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-14 makeStyles-Offset-15"
  />
  <table
    class="ChessboardTable"
    dir="ltr"
  >
    <tbody>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-23 Square White"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`App at /clock 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-27"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-28 makeStyles-Select-29 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-25 makeStyles-Offset-26"
  />
  <canvas
    class="makeStyles-Canvas-34 makeStyles-Canvas-35"
    height="400"
    width="400"
  />
</div>
`;

exports[`App at /counter 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-38"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-39 makeStyles-Select-40 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-36 makeStyles-Offset-37"
  />
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      0
    </span>
    <div
      class="MuiButtonGroup-root"
      role="group"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            Reset
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            +
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            -
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        data-testid="incrementIfOddButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            + if odd
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        data-testid="incrementAsyncButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            + in 1 second
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`App at /form-controls 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-47"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-48 makeStyles-Select-49 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-45 makeStyles-Offset-46"
  />
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <label
            class="MuiFormLabel-root FileUpload Safari"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <bdi
                  dir="auto"
                >
                  Browse…
                </bdi>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <bdi
              dir="auto"
            >
              No file selected.
            </bdi>
            <input
              accept="image/*"
              class="Input"
              multiple=""
              type="file"
            />
          </label>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiFormControl-root MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              label
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
              >
                <span
                  class=""
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        style="transform: scaleY(-1);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 5H1v16c0 1.1.9 2 2 2h16v-2H3V5zm18-4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 16H7V3h14v14z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-54 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-56"
                >
                  <span>
                    label
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiFormControl-root MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              label
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-54 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-56"
                >
                  <span>
                    label
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiFormControl-root MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              label
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
              >
                <span
                  class=""
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        style="transform: scaleY(-1);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 5H1v16c0 1.1.9 2 2 2h16v-2H3V5zm18-4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 16H7V3h14v14z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-54 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-56"
                >
                  <span>
                    label
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="Container"
          >
            <pre
              class="makeStyles-Pre-58 makeStyles-Pre-60 Pre"
            />
            <div
              class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                data-shrink="false"
              >
                code
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline makeStyles-TextArea-59 TextArea MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  rows="1"
                  spellcheck="false"
                  style="height: 0px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline makeStyles-TextArea-59 TextArea MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <span
                    class=""
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          style="transform: scaleY(-1);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M3 5H1v16c0 1.1.9 2 2 2h16v-2H3V5zm18-4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 16H7V3h14v14z"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-54 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-56"
                  >
                    <span>
                      code
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`App at /info 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-63"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-64 makeStyles-Select-65 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-61 makeStyles-Offset-62"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Fetch data
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Fetching not started.
  </p>
</div>
`;

exports[`App at /nonexistent-path 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-119"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-120 makeStyles-Select-121 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-117 makeStyles-Offset-118"
  />
  Error: No route matches /nonexistent-path.
</div>
`;

exports[`App at /paint 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-72"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-73 makeStyles-Select-74 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-70 makeStyles-Offset-71"
  />
  <canvas
    class="makeStyles-Canvas-79 makeStyles-Canvas-80 Canvas"
    height="320"
    width="320"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Clear
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="MuiToggleButtonGroup-root MuiToggleButtonGroup-vertical"
    role="group"
  >
    <button
      aria-pressed="true"
      class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-selected"
      tabindex="0"
      type="button"
      value="pen"
    >
      <span
        class="MuiToggleButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
      value="bucket"
    >
      <span
        class="MuiToggleButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.56 8.94L7.62 0 6.21 1.41l2.38 2.38-5.15 5.15c-.59.59-.59 1.54 0 2.12l5.5 5.5c.29.29.68.44 1.06.44s.77-.15 1.06-.44l5.5-5.5c.59-.58.59-1.53 0-2.12zM5.21 10L10 5.21 14.79 10H5.21zM19 11.5s-2 2.17-2 3.5c0 1.1.9 2 2 2s2-.9 2-2c0-1.33-2-3.5-2-3.5z"
          />
          <path
            d="M0 20h24v4H0z"
            fill-opacity=".36"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root"
    >
      line cap
    </label>
    <div
      class="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-81 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-84"
              name="lineCap"
              type="radio"
              value="butt"
            />
            <div
              class="PrivateRadioButtonIcon-root-85"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-86"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          butt
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-81 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-82 Mui-checked MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-84"
              name="lineCap"
              type="radio"
              value="round"
            />
            <div
              class="PrivateRadioButtonIcon-root-85 PrivateRadioButtonIcon-checked-87"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-86"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          round
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-81 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-84"
              name="lineCap"
              type="radio"
              value="square"
            />
            <div
              class="PrivateRadioButtonIcon-root-85"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-86"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          square
        </span>
      </label>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-88"
  >
    <ul
      class="MuiList-root MuiList-padding"
    >
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom"
            >
              <bdi
                dir="auto"
              >
                Brush size
              </bdi>
            </p>
            <span
              class="MuiSlider-root MuiSlider-colorPrimary"
            >
              <span
                class="MuiSlider-rail"
              />
              <span
                class="MuiSlider-track"
                style="left: 0%; width: 9.090909090909092%;"
              />
              <input
                type="hidden"
                value="10"
              />
              <span
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="1"
                aria-valuenow="10"
                class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
                data-index="0"
                role="slider"
                style="left: 9.090909090909092%;"
                tabindex="0"
              />
            </span>
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`App at /reminder 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-96"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-97 makeStyles-Select-98 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-94 makeStyles-Offset-95"
  />
  <ul
    class="MuiList-root MuiList-padding"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Add
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`App at /settings 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-105"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-106 makeStyles-Select-107 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-103 makeStyles-Offset-104"
  />
  <div
    class="MuiGrid-root MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 MuiGrid-grid-xl-2"
    >
      <ul
        class="MuiList-root MuiList-padding MuiList-subheader"
      >
        <li
          class="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
        >
          <bdi
            dir="auto"
          >
            General
          </bdi>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-gutters MuiListItem-secondaryAction ListItemSecondaryActionIsLocaleSelect"
          >
            <div
              class="MuiListItemText-root"
              id="00000000-0000-4000-0000-000000000000"
            >
              <span
                class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <bdi
                  dir="auto"
                >
                  Language
                </bdi>
              </span>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div
              aria-labelledby="00000000-0000-4000-0000-000000000000"
              class="MuiFormControl-root"
            >
              <div
                class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorSecondary MuiInput-colorSecondary MuiInputBase-formControl MuiInput-formControl"
              >
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="00000000-0000-4000-0000-000000000000"
                  class="MuiSelect-root MuiSelect-select makeStyles-Select-106 makeStyles-Select-112 Select MuiSelect-selectMenu MuiInputBase-input MuiInput-input MuiInputBase-inputHiddenLabel"
                  id="00000000-0000-4000-0000-000000000000"
                  role="button"
                  tabindex="0"
                >
                  English
                </div>
                <input
                  aria-hidden="true"
                  class="MuiSelect-nativeInput"
                  data-testid="localeSelect"
                  tabindex="-1"
                  value="en"
                />
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSelect-icon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 MuiGrid-grid-xl-2"
    >
      <ul
        class="MuiList-root MuiList-padding MuiList-subheader"
      >
        <li
          class="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
        >
          <bdi
            dir="auto"
          >
            Appearance
          </bdi>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-gutters MuiListItem-secondaryAction ListItemSecondaryActionIsRadioGroup3"
          >
            <div
              class="MuiListItemText-root"
              id="00000000-0000-4000-0000-000000000000"
            >
              <span
                class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <bdi
                  dir="auto"
                >
                  Theme
                </bdi>
              </span>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <div
              aria-labelledby="00000000-0000-4000-0000-000000000000"
              class="MuiFormGroup-root MuiFormGroup-row"
              role="radiogroup"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-113 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-116"
                    name="theme"
                    type="radio"
                    value="light"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm0-10c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-113 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-116"
                    name="theme"
                    type="radio"
                    value="dark"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-113 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-114 Mui-checked MuiIconButton-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    checked=""
                    class="PrivateSwitchBase-input-116"
                    name="theme"
                    type="radio"
                    value="device"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10.85 12.65h2.3L12 9l-1.15 3.65zM20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM14.3 16l-.7-2h-3.2l-.7 2H7.8L11 7h2l3.2 9h-1.9z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
            </div>
          </div>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-gutters Mui-disabled MuiListItem-secondaryAction ListItemSecondaryActionIsSwitch"
            disabled=""
          >
            <div
              class="MuiListItemText-root"
              id="00000000-0000-4000-0000-000000000000"
            >
              <span
                class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <bdi
                  dir="auto"
                >
                  Full screen
                </bdi>
              </span>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <span
              class="MuiSwitch-root"
            >
              <span
                aria-disabled="true"
                aria-labelledby="00000000-0000-4000-0000-000000000000"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-113 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-115 Mui-disabled Mui-disabled Mui-disabled"
                tabindex="-1"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-116 MuiSwitch-input"
                    disabled=""
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb"
                  />
                </span>
              </span>
              <span
                class="MuiSwitch-track"
              />
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 MuiGrid-grid-lg-3 MuiGrid-grid-xl-2"
    >
      <ul
        class="MuiList-root MuiList-padding MuiList-subheader"
      >
        <li
          class="MuiListSubheader-root MuiListSubheader-sticky MuiListSubheader-gutters"
        >
          <bdi
            dir="auto"
          >
            Security and privacy
          </bdi>
        </li>
        <li
          class="MuiListItem-container"
        >
          <div
            class="MuiListItem-root MuiListItem-gutters MuiListItem-secondaryAction ListItemSecondaryActionIsSwitch"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline"
              id="00000000-0000-4000-0000-000000000000"
            >
              <span
                class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
              >
                <bdi
                  dir="auto"
                >
                  Accept cookies
                </bdi>
              </span>
              <p
                class="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
              >
                <bdi
                  dir="auto"
                >
                  We use cookies to analyze our traffic.
                </bdi>
              </p>
            </div>
          </div>
          <div
            class="MuiListItemSecondaryAction-root"
          >
            <span
              class="MuiSwitch-root"
            >
              <span
                aria-disabled="false"
                aria-labelledby="00000000-0000-4000-0000-000000000000"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-113 MuiSwitch-switchBase MuiSwitch-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input-116 MuiSwitch-input"
                    type="checkbox"
                    value=""
                  />
                  <span
                    class="MuiSwitch-thumb"
                  />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </span>
              <span
                class="MuiSwitch-track"
              />
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
